--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,5 +1,20 @@
 @import "tailwindcss";
+@import "@nuxt/ui";
 
-@import "@nuxt/ui"; /* Important : Cela importe les styles spécifiques de Nuxt UI */
+/* Si VS Code souligne @theme, tu peux ignorer l'alerte, 
+   le compilateur Nuxt, lui, va le comprendre parfaitement. */
+@theme {
+  --color-primary-50: var(--color-sky-50);
+  --color-primary-100: var(--color-sky-100);
+  --color-primary-200: var(--color-sky-200);
+  --color-primary-300: var(--color-sky-300);
+  --color-primary-400: var(--color-sky-400);
+  --color-primary-500: var(--color-sky-500);
+  --color-primary-600: var(--color-sky-600);
+  --color-primary-700: var(--color-sky-700);
+  --color-primary-800: var(--color-sky-800);
+  --color-primary-900: var(--color-sky-900);
+  --color-primary-950: var(--color-sky-950);
 
-/* @variant dark (&:where(.dark, .dark *)); */
+  --ui-primary: var(--color-primary-500);
+}
